# electronics

./: .gitignore  .pre-commit-config.yaml  Readme.md  devbox.json  pyproject.toml
greenhouse/: Readme.md  Sketch.fzz  code.py
lcd-16x2/: Readme.md  code.py
rgb_led/: Readme.md  code.py  requirements.txt  rgb_led.py
temperature-sensor/: Readme.md  bmp180.py  code.py
