[tool.poetry]
name = "electronics"
version = "0.1.0"
description = "Multiple Electronic projects"
authors = ["manolo <mmartinortiz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
micropython-rp2-stubs = "*"
micropython-esp32-stubs = "*"
circup = "^1.5.2"
types-circuitpython = "^8.1.0"
pipkin = "^2.0b2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
